# CrewAI-Trip_planner

./: README.md  agents.py  main.py  pyproject.toml  tasks.py
tools/: calculator_tools.py  search_tools.py
